--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "eslint --cache . --ext ts,tsx",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
