--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -15,6 +15,12 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+        name: build
+        run: npm build
+
+        name: deploy
+        run: npm deploy -p --auth {{secrets.DIEGOAUTHTOKEN}} --site {{secrets.SITE_ID}}
+
       - name: Test Lint
         run: npm run lint
 
