--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -16,7 +16,7 @@ jobs:
         run: npm install
 
         name: build
-        run: npm build
+        run: CI-false npm run build
 
         name: deploy
         run: npm deploy -p --auth {{secrets.DIEGOAUTHTOKEN}} --site {{secrets.SITE_ID}}
