--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -19,7 +19,7 @@ jobs:
         run: CI-false npm run build
 
         name: deploy
-        run: npm deploy -p --auth {{secrets.DIEGOAUTHTOKEN}} --site {{secrets.SITE_ID}}
+        run: npm deploy -p --auth ${{secrets.DIEGOAUTHTOKEN}} --site ${{secrets.SITE_ID}}
 
       - name: Test Lint
         run: npm run lint
